p2/k3s/app3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-three-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http: # host를 지정하지 않음 -> 모든 요청에 대해 적용
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-three-svc
                port:
                  number: 80
